[package]
name = "board-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = {version = "0.4.6", package = "gtk4" ,features = ["v4_6"]}
gdk = {version = "0.4.6", package = "gdk4" ,features = ["v4_6"]}
glib = "0.15.8"
rand = "0.8.5"
lazy_static = "1.4.0"
